[gd_scene load_steps=15 format=3 uid="uid://32t83y7svysh"]

[ext_resource type="Script" path="res://scenes/level/level.gd" id="1_fuqfl"]
[ext_resource type="PackedScene" uid="uid://ctiqao37r366j" path="res://scenes/player/player.tscn" id="1_mhnyq"]
[ext_resource type="PackedScene" uid="uid://cpby5064rmlmc" path="res://scenes/player2D/player2D.tscn" id="3_0why2"]
[ext_resource type="Script" path="res://scenes/level/inventory_in_level.gd" id="3_qwes5"]
[ext_resource type="PackedScene" uid="uid://capl4wlco3cto" path="res://inventory/inventory.tscn" id="4_0kg62"]
[ext_resource type="Script" path="res://scenes/level/ui_manager.gd" id="4_ad7ql"]
[ext_resource type="PackedScene" uid="uid://duirixlq3sftf" path="res://inventory/slot.tscn" id="5_kvqdy"]
[ext_resource type="PackedScene" uid="uid://x62350om1ign" path="res://scenes/ui/settings_ui.tscn" id="7_j3sfu"]
[ext_resource type="PackedScene" uid="uid://bpy3u1daqh1yj" path="res://scenes/ui/escape_menu.tscn" id="8_ylmtn"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_tomt0"]
sky_top_color = Color(0.188235, 0.45098, 0.756863, 1)
sky_horizon_color = Color(0.572549, 0.67451, 0.721569, 1)

[sub_resource type="Sky" id="Sky_ev4mw"]
sky_material = SubResource("ProceduralSkyMaterial_tomt0")

[sub_resource type="Environment" id="Environment_nhx5x"]
background_mode = 2
sky = SubResource("Sky_ev4mw")
ambient_light_color = Color(0.329412, 0.423529, 0.52549, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_kryva"]
size = Vector2(10, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_5tclf"]
size = Vector3(10, 0.1, 10)

[node name="Level" type="Node3D"]
script = ExtResource("1_fuqfl")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_nhx5x")

[node name="Ground" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_kryva")

[node name="StaticBody3D" type="StaticBody3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0)
collision_layer = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground/StaticBody3D"]
shape = SubResource("BoxShape3D_5tclf")

[node name="Player" parent="." instance=ExtResource("1_mhnyq")]
unique_name_in_owner = true
player2D = ExtResource("3_0why2")

[node name="Lights" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Lights"]
transform = Transform3D(0.557876, -0.408838, 0.722237, 0, 0.870244, 0.492621, -0.829925, -0.274821, 0.485488, 0, 3.9348, 0)

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="Lights"]
transform = Transform3D(-0.424538, 0.614244, -0.665186, 0.330458, 0.789116, 0.517777, 0.84295, 0, -0.537991, 0, 3.77054, 0)

[node name="DirectionalLight3D3" type="DirectionalLight3D" parent="Lights"]
transform = Transform3D(-0.775149, 0.137055, 0.616733, -0.300953, 0.778209, -0.551197, -0.555491, -0.612868, -0.56198, 0, 3.77054, 0)
light_energy = 0.5

[node name="UI" type="CanvasLayer" parent="."]
unique_name_in_owner = true
script = ExtResource("4_ad7ql")

[node name="InventoryUI" type="Control" parent="UI"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("3_qwes5")

[node name="PlayerInventory" parent="UI/InventoryUI" instance=ExtResource("4_0kg62")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_right = 1.0
offset_left = -12.0
offset_top = -16.0
offset_right = 0.0
grow_horizontal = 0

[node name="GrabbedSlot" parent="UI/InventoryUI" instance=ExtResource("5_kvqdy")]
unique_name_in_owner = true
layout_mode = 1
offset_right = 64.0
offset_bottom = 64.0

[node name="ToastPanel" type="Panel" parent="UI"]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -199.5
offset_top = -64.0
offset_right = 199.5
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0

[node name="ToastLabel" type="Label" parent="UI/ToastPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.5
offset_top = -13.0
offset_right = 53.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Press E to use"

[node name="SettingsScreen" parent="UI" instance=ExtResource("7_j3sfu")]
unique_name_in_owner = true
visible = false

[node name="EscapeMenu" parent="UI" instance=ExtResource("8_ylmtn")]
unique_name_in_owner = true
size_flags_vertical = 4

[node name="AudioPlayers" type="Node3D" parent="."]

[node name="PickupSoundPlayer" type="AudioStreamPlayer" parent="AudioPlayers"]
unique_name_in_owner = true

[connection signal="interacts" from="Player" to="." method="_on_player_interacts"]
[connection signal="item_pickup" from="Player" to="." method="_on_player_item_pickup"]
[connection signal="picture_entered" from="Player" to="." method="_on_player_picture_entered"]
[connection signal="picture_exited" from="Player" to="." method="_on_player_picture_exited"]
[connection signal="toggle_inventory" from="Player" to="." method="_on_player_toggles_inventory"]
[connection signal="toggle_menu" from="Player" to="UI" method="_on_player_toggle_menu"]
[connection signal="drop_slot_data" from="UI/InventoryUI" to="." method="_on_inventory_ui_drop"]
[connection signal="gui_input" from="UI/InventoryUI" to="UI/InventoryUI" method="_on_gui_input"]
[connection signal="hide_menu" from="UI/EscapeMenu" to="UI" method="_on_escape_menu_hide_menu"]
[connection signal="quit_to_menu" from="UI/EscapeMenu" to="UI" method="_on_escape_menu_quit_to_menu"]
[connection signal="show_settings" from="UI/EscapeMenu" to="UI" method="_on_escape_menu_show_settings"]
